--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Hey, my name is Drijon, my prefered pronouns are He/Him and They/Them . I was born at 27th of April a few years ago and I currently live in Europe, Italy."
     />
     <link rel="apple-touch-icon" href="https://cdn.discordapp.com/avatars/778557320123777026/ef5053106258547bef3ad691e681fd5d.png?size=2048" />
 
