--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="https://cdn.discordapp.com/avatars/778557320123777026/ef5053106258547bef3ad691e681fd5d.png?size=2048" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Hey, my name is Drijon, my prefered pronouns are He/Him and They/Them . I was born at 27th of April a few years ago and I currently live in Europe, Italy."
-    />
-    <link rel="apple-touch-icon" href="https://cdn.discordapp.com/avatars/778557320123777026/ef5053106258547bef3ad691e681fd5d.png?size=2048" />
+    <script>
+      module.exports = {
+        metadata: {
+        title: `Drijon - Front-End Engineer`,
+        description: `Hi I'm Drijon, an experienced JavaScript and Python Developer. Specialised in React.JS and Node.JS\nTake a look at my Portfolio Website for more Information.`,
+        image: `https://avatars.githubusercontent.com/u/87547203?v=4`,
+        domainName: `drijon.co`,
+        color: `#3385FF`,
+        keywords: [
+            'Drijon',
+            'Drijon H.',
+            'Drijon#7577',
+            'Drijon Twitter',
+            'Drijon LinkedIn',
+            'Drijon GitHub',
+            'Drijon Italy',
+            'South Tyrol',
+            'Sienna',
+            'drijon.co',
+            'drijon.co',
+            'WFO',
+            'Drijon Discord',
+            'Coding Drijon',
+            'React Drijon',
+            'Drijon Developer'
+            'Drijon Ha'
+         ],
+    }
+}
+      }
+    </script>
+    <link rel="apple-touch-icon" href="https://avatars.githubusercontent.com/u/87547203?v=4" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Drijon - Software Engineer</title>
+    <title>Drijon - Front-End Engineer</title>
   </head>
   <body>
     <noscript>Oh.. Hi there! You will need to enable JavaScript to run this Website.</noscript>
